# Difotrain

./: .gitignore  CONTRIBUTING.md  README.md  imitation_model.pth  main.py  movements.json  pyproject.toml  setup_mediapipe.py
.github/workflows/: ci.yml  workflow.yml
capture/: record_pose.py
difotrain/: __init__.py  __main__.py  cli.py
difotrain/capture/: __init__.py  record_pose.py
difotrain/core/: __init__.py  episode.py  language.py  registry.py  spaces.py
difotrain/data/: __init__.py  dataset.py  normalize.py
difotrain/data/sources/: __init__.py  base.py  human_video.py  scripted_teleop.py  synthetic.py
difotrain/deploy/: __init__.py  runner.py  safety.py
difotrain/embodiment/: __init__.py  base.py
difotrain/embodiment/retarget/: __init__.py  base.py
difotrain/embodiment/sim/: __init__.py  planar_arm.py  pybullet_arm.py
difotrain/eval/: __init__.py  evaluator.py
difotrain/learning/: imitation.py
difotrain/policy/: __init__.py  base.py
difotrain/policy/native/: __init__.py  mlp_vla.py
difotrain/robot/: controller.py
difotrain/simulation/: pybullet_env.py
difotrain/train/: __init__.py  trainer.py
docs/: README.md  cli.md  concepts.md  examples.md  extending.md  faq.md  how-it-works.md  human-video.md  installation.md  python-api.md  quickstart.md
examples/reach_demo/: README.md  demo.py
learning/: imitation.py
representation/: skeleton.py
robot/: controller.py
storage/: movement_db.py
tests/: generate_dummy_data.py  test_core.py  test_data.py  test_embodiment.py  test_pipeline.py  test_pybullet.py  test_record_mock.py
(+2 files in other folders)
